<resources>
    <string name="app_name">Inspection Robot</string>
    <string name="btn_forward">Forward</string>
    <string name="btn_backward">Backward</string>
    <string name="btn_left">Left</string>
    <string name="btn_right">Right</string>
    <string name="btn_settings">Settings</string>
    <string name="socketNotNull">Socket is not null and cannot be used.</string>
    <string name="settings_title">Settings</string>
    <string name="settings_message">IP address of robot (e.g. 192.168.43.2)</string>
    <string name="settings_ok" translatable="false">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="settings_defaultip">"Default IP: "</string>
    <string name="btn_camerasettings">Camera settings</string>
    <string name="camerasettings_title">Choose camera resolution</string>
    <string name="camerasettings_quality0" translatable="false">160x120</string>
    <string name="camerasettings_quality1" translatable="false">176x144</string>
    <string name="camerasettings_quality2" translatable="false">320x240</string>
    <string name="camerasettings_quality3" translatable="false">352x288</string>
    <string name="camerasettings_quality4" translatable="false">640x480</string>
    <string name="camerasettings_quality5" translatable="false">800x600</string>
    <string name="camerasettings_quality6" translatable="false">1024x768</string>
    <string name="camerasettings_quality7" translatable="false">1280x1024</string>
    <string name="camerasettings_quality8" translatable="false">1600x1200</string>
    <string name="camerasettings_previousquality">Current camera quality:</string>
    <string name="camerasettings_newquality">New camera quality:</string>
    <string name="imageView">Camera preview</string>
    <string name="imageView_streamStarted">Started streaming from</string>
</resources>
